--- a/modeloSA.html
+++ b/modeloSA.html
@@ -20,9 +20,9 @@
            <div id ="cadastroMeio" > 
             <center>
                 <h1>cadastro</h1>
-                    <input id ="cadnome" placeholder="nome do usuario"><br><br>
-                    <input id="cadsenha" placeholder="senha"><br><br>
-                   <a href="login.js"><button onclick="cadastrar()"id="btnCadastro">cadastro</button><br></a>
+                     <input id ="inputNome" placeholder="nome do usuario"><br><br>
+                    <input id="inputSenha" placeholder="senha"><br><br>
+                    <button onclick="Cadastrar()"id = "btnCadastro">cadastro</button><br>
                     <label>já possui conta? Ir para login!</label>
                 </center>
         
